<resources>
    <string name="app_name">RxJava Test App</string>
    <string name="dummy_description_text">The banana plant, often erroneously referred to as a \'tree\', is a large herb, with succulent, very juicy stem which is a cylinder of leaf-petiole sheaths, reaching a height of 6-7.5 m and arising from a fleshy rhizome or corm. Suckers spring up around the main plant forming a clump or \'stool\'\', the eldest sucker replacing the main plant when it fruits and dies, this process of succession continues indefinitely. As the young fruits develop from the female flowers, they look like slender green fingers. The bracts are soon shed and the fully grown fruits in each cluster become a \'hand\' of bananas, and the stalk droops with the weight until the bunch is upside down. The fruit (technically a \'berry\') turns from deep-green to yellow or red and may range from 6-30 cm in length and 2-5 cm in width, and from oblong, cylindrical and blunt to pronouncedly 3-angled, somewhat curved and hornlike. The flesh, ivory-white to yellow may be firm, astringent, even gummy with latex, when unripe, turning tender, slippery and soft when ripe.</string>
    <string name="dummy_uses_text">The ripe banana is utilised in a multitude of ways in the human diet, unripe bananas (plantain) are baked whole on hot stones. Banana leaves can be used as \'plates\' to eat out of.</string>
    <string name="dummy_propagation_text">Banana seeds are employed for propagation only in breeding programs. The common method is the is transplantation of suckers. These should not be too young nor too old. The sucker first emerges as a conical shoot which opens and releases leaves that are mostly midribs with only vestiges of blade. These juvenile leaves are called \'sword\', \'spear\', or \'arrow\', leaves. Just before the sucker produces wide leaves resembling those of the mature plant but smaller, it has sufficient corm development to be transplanted.</string>
    <string name="dummy_soil_text">The banana plant will grow and fruit under very poor conditions but will not flourish and be economically productive without deep, well-drained soil�loam, rocky sand, marl, red laterite, volcanic ash, sandy clay, even heavy clay�but not fine sand which holds water. Bananas prefer an acid soil but not below pH 5.0.</string>
    <string name="dummy_climate_text">The edible bananas are restricted to tropical or near tropical regions. A suitable banana climate is a mean temperature of 26�C and mean rainfall of 10 cm per month. There should not be more than 3 months of dry season. Cool weather and prolonged drought retard growth. Banana plants produce only one leaf per month in winter, 4 per month in summer. If low temperatures occur just at flowering time, the bud may not be able to emerge from the stem.</string>
    <string name="dummy_health_text">All parts of the banana plant have medicinal applications: the flowers in bronchitis and dysentery and on ulcers; cooked flowers are given to diabetics; the astringent plant sap in cases of hysteria, epilepsy, leprosy, fevers, hemorrhages, acute dysentery and diarrhea, and it is applied on hemorrhoids, insect and other stings and bites; young leaves are placed as poultices on burns and other skin afflictions; the astringent ashes of the unripe peel and of the leaves are taken in dysentery and diarrhea and used for treating malignant ulcers; the roots are administered in digestive disorders, dysentery and other ailments; banana seed mucilage is given in cases of catarrh and diarrhea in India.</string>
    <string name="item_all_plants">All Plants</string>
    <string name="item_random_plant">Random Plant</string>
    <string name="item_read_more">Read More</string>
    <string name="item_read_less">Read Less</string>
    <string name="search_title">Search</string>
</resources>
