<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_regular"
            android:paddingTop="@dimen/margin_regular">

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewImageNameAndBotanicalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_regular"
                            android:layout_marginStart="@dimen/margin_regular"
                            android:layout_marginTop="@dimen/margin_regular"
                            android:textAlignment="inherit"
                            android:textColor="@android:color/black"
                            android:textSize="30sp"
                            tools:text="Banana" />

                        <TextView
                            android:id="@+id/textViewBotanicalName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_regular"
                            android:layout_marginStart="@dimen/margin_regular"
                            android:layout_marginTop="@dimen/margin_small"

                            tools:text="Musa acuminata, M. Paradisiaca, M. Basjoo" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageViewPlant"
                            android:layout_width="180dp"
                            android:layout_height="120dp"
                            android:layout_margin="@dimen/margin_regular" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewPlantDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                app:layout_constraintTop_toBottomOf="@id/cardViewImageNameAndBotanicalName">

            <TextView
                android:id="@+id/textViewAlsoKnownAsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="Also known as"
                android:textColor="@color/colorHeader"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cardViewImageNameAndBotanicalName"/>

            <TextView
                android:id="@+id/textViewAlsoKnownAs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_regular"
                android:layout_marginEnd="@dimen/margin_regular"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                tools:text="Plantain, Kela, Pl�tano, Banane, Cambur, Feige"
                app:layout_constraintTop_toBottomOf="@id/textViewAlsoKnownAsHeader" />


            <TextView
                android:id="@+id/textViewDescriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="Description"
                android:textColor="@color/colorHeader"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textViewAlsoKnownAs" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_regular"
                android:layout_marginEnd="@dimen/margin_regular"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                tools:text="@string/dummy_description_text"
                app:layout_constraintTop_toBottomOf="@id/textViewDescriptionHeader" />


            <TextView
                android:id="@+id/textViewUsesHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="Uses"
                android:textColor="@color/colorHeader"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

            <TextView
                android:id="@+id/textViewUses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_regular"
                android:layout_marginEnd="@dimen/margin_regular"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                tools:text="@string/dummy_uses_text"
                app:layout_constraintTop_toBottomOf="@id/textViewUsesHeader" />

            <TextView
                android:id="@+id/textViewPropagationHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="Propagation"
                android:textColor="@color/colorHeader"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textViewUses" />

            <TextView
                android:id="@+id/textViewPropagation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_regular"
                android:layout_marginEnd="@dimen/margin_regular"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                tools:text="@string/dummy_propagation_text"
                app:layout_constraintTop_toBottomOf="@id/textViewPropagationHeader" />

            <TextView
                android:id="@+id/textViewSoilHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="Soil"
                android:textColor="@color/colorHeader"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textViewPropagation" />

            <TextView
                android:id="@+id/textViewSoil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_regular"
                android:layout_marginEnd="@dimen/margin_regular"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                tools:text="@string/dummy_soil_text"
                app:layout_constraintTop_toBottomOf="@id/textViewSoilHeader" />

            <TextView
                android:id="@+id/textViewClimateHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="Climate"
                android:textColor="@color/colorHeader"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textViewSoil" />

            <TextView
                android:id="@+id/textViewClimate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_regular"
                android:layout_marginEnd="@dimen/margin_regular"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                tools:text="@string/dummy_climate_text"
                app:layout_constraintTop_toBottomOf="@id/textViewClimateHeader" />

            <TextView
                android:id="@+id/textViewHealthHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="Health"
                android:textColor="@color/colorHeader"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textViewClimate" />

            <TextView
                android:id="@+id/textViewHealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_regular"
                android:layout_marginEnd="@dimen/margin_regular"
                android:layout_marginLeft="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_regular"
                tools:text="@string/dummy_health_text"
                app:layout_constraintTop_toBottomOf="@id/textViewHealthHeader" />

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>